--- a/css/style.scss
+++ b/css/style.scss
@@ -4,8 +4,11 @@ div{
   outline: 1px solid red;
 }
 body{
-  background-image: url('../img/wall.jpg');
-  background-attachment:fixed;
+body{
+  background-image: url("../img/wall.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 
 }
 
