--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 .header .logo {
   border: 2px solid #CFDEFF;
   border-radius: 96% 35%;
-  margin: 0 auto;
+  margin: -1em auto;
   overflow: hidden;
   width: 20%; }
   .header .logo img {
@@ -68,6 +68,15 @@ body {
     margin-top: 2em;
     margin-left: -23.75em;
     width: 48em; }
+    .line .word .om {
+      background-image: url("../img/om2.fw.png");
+      background-position: 0 0;
+      background-repeat: no-repeat;
+      height: 28px;
+      left: 23.2em;
+      position: relative;
+      top: 1.8em;
+      width: 27px; }
     .line .word .block {
       float: right;
       width: 46%;
@@ -135,7 +144,7 @@ body {
         top: 0.75em; }
     .line .word h2.title {
       font-size: 1.0em;
-      color: gray;
+      color: black;
       position: relative;
       top: -1.6em;
       text-align: center;
@@ -144,7 +153,7 @@ body {
       margin-right: 3em; }
     .line .word .item {
       font-size: 1.15714em;
-      color: gray;
+      color: black;
       position: relative;
       top: -1.7em;
       text-align: -moz-center;
